<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_true"
        android:key="@string/australian_dollars_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/australian_dollars"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/canadian_dollars_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/canadian_dollars"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/chinese_yen_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/chinese_yen"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/european_euro_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/european_euro"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/ghanaian_cedi_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/ghanaian_cedi"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_true"
        android:key="@string/naira_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/naira"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/israeli_new_shekel_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/israeli_new_shekel"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/jamaican_dollar_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/jamaican_dollar"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/japanese_yen_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/japanese_yen"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/kenyan_shilling_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/kenyan_shilling"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/mauritian_rupee_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/mauritian_rupee"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/mexican_peso_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/mexican_peso"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/norwegian_krone_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/norwegian_krone"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_true"
        android:key="@string/pound_sterling_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/pound_sterling"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/qatari_riyal_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/qatari_riyal"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/russian_ruble_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/russian_ruble"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/rwandan_fran_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/rwandan_franc"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/swedish_krona_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/swedish_krona"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_false"
        android:key="@string/south_african_rand_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/south_african_rand"/>
    <CheckBoxPreference
        android:defaultValue="@string/user_choice_true"
        android:key="@string/us_dollars_key"
        android:summaryOff="@string/currency_summary_off"
        android:summaryOn="@string/currency_summary_on"
        android:title="@string/us_dollars"/>
</PreferenceScreen>